--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@sveltejs/adapter-node": "^5.0.1",
 		"bcryptjs": "^2.4.3",
 		"cookie": "^0.6.0",
+		"jsonwebtoken": "^9.0.2",
 		"prisma": "^5.14.0"
 	}
 }
